# veri-yapilari-dorduncu-odev

./: BeniOku.txt  CMakeLists.txt  Sayilar.txt  calistir.lnk  makefile  temizle.lnk
doc/: odev_raporu.docx
include/: bagilListe.h  dosya.h  dugum.h  gezici.h  hata.h  heapAgac.h  ikiliHeap.h  islem.h  sayi.h
src/: bagilListe.cpp  dosya.cpp  dugum.cpp  gezici.cpp  hata.cpp  heapAgac.cpp  ikiliHeap.cpp  islem.cpp  main.cpp  sayi.cpp
